--- a/finish_project/src/main/resources/templates/user-admin/product-manager/product-info.html
+++ b/finish_project/src/main/resources/templates/user-admin/product-manager/product-info.html
@@ -145,7 +145,7 @@
             dataType: 'json',
             success: function (result) {
                 console.log(result);
-                window.location.href = "/product";
+                window.location.href = "/admin/product";
             },
             error: function (error) {
                 console.log(error);
