--- a/finish_project/src/main/resources/templates/guest/login.html
+++ b/finish_project/src/main/resources/templates/guest/login.html
@@ -35,7 +35,7 @@
                         </form>
 
 
-                        <p class="text-center mb-0">Don't have an Account? <a href="">Sign Up</a></p>
+                        <p class="text-center mb-0">Don't have an Account? <a th:href="@{/register}">Sign Up</a></p>
                     </div>
                 </div>
             </div>
