--- a/finish_project/src/main/resources/templates/user-admin/product-manager/product-list.html
+++ b/finish_project/src/main/resources/templates/user-admin/product-manager/product-list.html
@@ -34,6 +34,8 @@
                             <th scope="col">Description</th>
                             <th scope="col">Old price</th>
                             <th scope="col">Price</th>
+                            <th scope="col">Avatar</th>
+                            <th scope="col">Image</th>
 
                         </tr>
                         </thead>
@@ -48,6 +50,8 @@
                             <td th:text="${product.description}"></td>
                             <td th:text="${product.oldPrice}"></td>
                             <td th:text="${product.price}"></td>
+                            <td><img style="width: 50px; height: 80px"  th:src="'data:image/png;base64,'+${product.avatar}" alt=""></td>
+                            <td><img style="width: 50px; height: 80px"  th:src="'data:image/png;base64,'+${product.image}" alt=""></td>
                             <td><a class="btn btn-sm btn-primary" th:href="@{/admin/product/product-info/{id}(id=${product.getId()})}">Detail</a></td>
                             <td><button th:onclick="'deleteProduct(' + ${product.getId()} + ')'" class="btn btn-sm btn-primary" >Delete</button></td>
 
