--- a/finish_project/src/main/resources/templates/user-admin/user-manager/user-info.html
+++ b/finish_project/src/main/resources/templates/user-admin/user-manager/user-info.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" name="password" class="form-control" id="password"
+                                <input type="text" name="password" class="form-control" id="password"
                                        th:field="*{password}">
 
                             </div>
